# structstats

./: CMakeLists.txt  README.md  pyproject.toml
src/structstats/: __init__.py  core.cpp  features.py
tests/: test_structstats.py
